--- a/settings.json
+++ b/settings.json
@@ -1,11 +1,14 @@
 {
   "ID": 0,
-  "IP": "192.168.1.99",
+  "IP": "10.61.42.99",
   "location": "49.14178021389778,18.353783098441415",
   "time_to_heartbeat": 20,
   "time_to_heartbeat_offline": 25,
   "save_table": false,
   "time_to_save": 60,
+  "max_mess": 20,
+  "cache_size_mb": 1000,
+  "clear_cache_on_startup": false,
   "log": {
     "save_error": true,
     "print_error": true,
@@ -13,13 +16,13 @@
     "print_warning": true,
     "save_message": false,
     "print_message": true,
-    "enable_debug": true
+    "enable_debug": false
   },
   "heartbeat_table": {
-    "ID": [],
-    "IP": [],
-    "location": [],
-    "file_system": [],
-    "last_heartbeat": []
+    "ID": [1],
+    "IP": ["10.61.42.92"],
+    "location": [""],
+    "file_system": [""],
+    "last_heartbeat": [5]
   }
 }
